--- a/tickets/package.json
+++ b/tickets/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth",
+  "name": "tickets",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@krismat/common": "^1.0.2",
+    "@krismat/common": "^1.0.3",
     "@types/cookie-session": "^2.0.45",
     "@types/express": "^4.17.18",
     "@types/jsonwebtoken": "^9.0.3",
