nats-test and emitting events from new ticket and updated ticket

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # **/node_modules
 **/.next
 auth/node_modules
-# client/node_modules
+client/node_modules
 # client/.next
 tickets/node_modules
 common/node_modules
