--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -16,6 +16,10 @@ build:
       context: tickets
       docker:
         dockerfile: Dockerfile
+    - image: kris2111/orders
+      context: orders
+      docker:
+        dockerfile: Dockerfile
 manifests:
   rawYaml:
     # - infra/k8s/auth-depl.yaml
