--- a/payments/package.json
+++ b/payments/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "orders",
+  "name": "payments",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@krismat/common": "^1.0.11",
+    "@krismat/common": "^1.0.9",
     "@types/cookie-session": "^2.0.45",
     "@types/express": "^4.17.18",
     "@types/jsonwebtoken": "^9.0.3",
@@ -31,6 +31,7 @@
     "mongoose": "^7.5.3",
     "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
+    "stripe": "^14.4.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
