--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -20,6 +20,15 @@ build:
       context: orders
       docker:
         dockerfile: Dockerfile
+    - image: kris2111/payments
+      context: payments
+      docker:
+        dockerfile: Dockerfile    
+    - image: kris2111/expiration
+      context: expiration
+      docker:
+        dockerfile: Dockerfile    
+
 manifests:
   rawYaml:
     # - infra/k8s/auth-depl.yaml
