--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -8,10 +8,10 @@ build:
       context: auth
       docker:
         dockerfile: Dockerfile
-    - image: kris2111/client
-      context: client
-      docker:
-        dockerfile: Dockerfile
+    # - image: kris2111/client
+    #   context: client
+    #   docker:
+    #     dockerfile: Dockerfile
     - image: kris2111/tickets
       context: tickets
       docker:
